Staff commands/crate keys functionality added. Currently using PebblesCrates, will be made configurable later.