@@ -11,10 +11,10 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static in.usera.cmdibuzz.Cmdibuzz.MOD_ID;
 
@@ -25,7 +25,9 @@ public class CmdibuzzConfig {
             .setPrettyPrinting()
             .create();
     public static Map<String, List<String>> COMMAND_POOLS = new HashMap<>();
-    public static List<String> CRATE_KEYS = List.of();
+    public static List<String> CRATE_KEYS = new ArrayList<>();
+
+    public static String TEST_STRING = "This is a test";
 
     public CmdibuzzConfig() {
         File configFolder = new File(System.getProperty("user.dir") + "/config/cmdibuzz");
@@ -39,18 +41,22 @@ public class CmdibuzzConfig {
 
         try {
             JsonObject obj = this.GSON.fromJson(new FileReader(configFile), JsonObject.class);
-            List<JsonObject> commandPoolsJson = obj.get("command_pools").getAsJsonArray().asList().stream().map(JsonElement::getAsJsonObject).collect(Collectors.toList());
-            commandPoolsJson.forEach(jsonObject -> {
-                jsonObject.entrySet().forEach(entry -> {
-                    List<String> commands = entry.getValue().getAsJsonArray().asList().stream().map(JsonElement::getAsString).collect(Collectors.toList());
-                    COMMAND_POOLS.put(entry.getKey(), commands);
-                    Cmdibuzz.LOGGER.info("[" + MOD_ID + "]: " + "Loaded command pool \"" + entry.getKey() + "\" (" + commands.size() + " commands)");
+            List<JsonObject> commandPoolsJson = obj.get("command_pools").getAsJsonArray().asList().stream().map(JsonElement::getAsJsonObject).toList();
+            commandPoolsJson.forEach((jsonObject -> {
+                jsonObject.asMap().forEach((name, jsonElement) -> {
+                    List<String> commands = jsonElement.getAsJsonArray().asList().stream().map(JsonElement::getAsString).toList();
+                    COMMAND_POOLS.put(name, commands);
+                    Cmdibuzz.LOGGER.info("[" + MOD_ID + "]: " + "Loaded command pool \"" + name + "\" (" + commands.size() + " commands)");
+
                 });
-            });
+            }));
 
             List<JsonElement> crateKeysJson = obj.get("crate_keys").getAsJsonArray().asList();
-            CRATE_KEYS = crateKeysJson.stream().map(JsonElement::getAsString).collect(Collectors.toList());
-            Cmdibuzz.LOGGER.info("[" + MOD_ID + "]: " + "Loaded crate keys (" + CRATE_KEYS.size() + " keys)");
+            crateKeysJson.forEach(jsonElement -> {
+                CRATE_KEYS.add(jsonElement.getAsString());
+                Cmdibuzz.LOGGER.info("[" + MOD_ID + "]: " + "Loaded crate key \"" + jsonElement.getAsString() + "\"");
+            });
+
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -74,9 +80,8 @@ public class CmdibuzzConfig {
                     .endArray().endObject()
                     .endArray()
                     .name("crate_keys").beginArray()
-                    .value("example_key_1")
-                    .value("example_key_2")
-                    .value("example_key_3")
+                    .value("Pokemon Crate")
+                    .value("Event Key")
                     .endArray().endObject()
                     .flush();
         } catch (IOException e) {
